--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ numpy==1.20.3
 pandas==1.2.4
 pathlib==1.0.1
 pathspec==0.8.1
+Pillow==8.2.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
 python-dateutil==2.8.1
