--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
+DateTime==4.3
+GitPython==3.1.17
+Pillow==8.2.0
 appdirs==1.4.4
 black==21.5b2
 certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
-DateTime==4.3
 flake8==3.9.2
 func-timeout==4.3.5
 gitdb==4.0.7
-GitPython==3.1.17
 idna==2.10
+matplotlib
 mccabe==0.6.1
 mock==4.0.3
 mypy-extensions==0.4.3
@@ -17,15 +19,14 @@ numpy==1.20.3
 pandas==1.2.4
 pathlib==1.0.1
 pathspec==0.8.1
-Pillow==8.2.0
 pycodestyle==2.7.0
 pyflakes==2.3.1
 python-dateutil==2.8.1
 pytz==2021.1
 regex==2021.4.4
 requests==2.25.1
-ruamel.yaml==0.17.7
 ruamel.yaml.clib==0.2.2
+ruamel.yaml==0.17.7
 six==1.16.0
 smmap==4.0.0
 toml==0.10.2
